@@ -5,6 +5,8 @@ Changes in stable release 2.4.6 (not released yet)
 
 * Fixed a read descriptor problem in FvwmTaskBar
 
+* Fixed a minor colour update bug in the pager.
+
 Changes in stable release 2.4.5 (27-Jan-2002)
 
 * Fixed minor problems in popping sub menus up and down.
