@@ -1,3 +1,8 @@
+2002-02-06  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* FvwmPager/FvwmPager.c (list_focus):
+	fixed updating the hilight colour in the pager
+
 2002-02-03  * FvwmTaskBar/FvwmTaskBar.c (LoopOnEvents):
 
 	* FvwmTaskBar/FvwmTaskBar.c (LoopOnEvents):
