@@ -1,6 +1,11 @@
-2002-02-03 olicha  <olivier.chapuis@free.fr>  
+2002-02-06  Dominik Vogt  <dominik.vogt@gmx.de>
 
-	* NEWS: TaskBar news 
+	* fvwm/update.c (apply_window_updates):
+	fixed propagation of window border and title colours to the modules
+
+2002-02-03 olicha  <olivier.chapuis@free.fr>
+
+	* NEWS: TaskBar news
 
 2002-01-30  Mikhael Goikhman  <migo@homemail.com>
 
